[tool.poetry]
name = "repl_python3_FrayedBetterProcessors"
version = "0.1.0"
description = ""
authors = ["yraantoniv7@gmail.com"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
PyNaCl = "^1.4.0"
simple-colors = "^0.1.5"
ffmpeg = "^1.4"
virtualenv = "^20.10.0"
youtube_dl = "^2021.6.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
